# ai-short-drama-production-controller

./: .gitignore  AGENTS.md  CODEX_INSTALL.md  README.md  SKILL.md  V02_RECOMMENDED.md  V02_USAGE.md  pyproject.toml
codex_tasks/: install_and_test_skill.md
config/: script_mixer.example.json  script_mixer.integration-checklist.example.json
docs/: FUTURE_DEVELOPMENT_TODO.md  jianying-edit-workflow.md  prompt_reference_learning.md  script-driven-mixer.md  script-mixer-integration-check.md  script-mixer-next-development-plan.md  script-mixer-review.md
examples/: input_reference_film.md  input_script.md  input_story_idea.md
prompt_library/: derived_rules.md
repair/: repair_rules.md
rules/: production_rules.md  qa_rules.md  v02_qa_rules.md
schemas/: project_schema.json  shot_schema.json
scripts/: build_standalone_mixer_repo.py  create_standalone_mixer_repo.ps1  install_for_codex.py  run_jianying_project.ps1  script_mixer_acceptance.py  setup_jianying_windows.ps1  v02_full_smoke.py  v02_smoke.py
short_drama_controller/: __init__.py  cli.py  constants.py  core.py  exporters.py  models.py  project_io.py  repair.py  v02_action_contract.py  v02_asset_expand.py  v02_assets.py  v02_batch_inference.py  v02_cli.py  v02_clip_plan.py  v02_constants.py  v02_coverage_qa.py  v02_dialogue.py  v02_dialogue_bind.py  v02_director_docs.py  v02_drama_structure.py  v02_exporters.py  v02_full_cli.py  v02_grid_strategy.py  v02_io.py  v02_mainline_qa.py  v02_models.py  v02_preproduction.py  v02_prompts.py  v02_qa.py  v02_qa_gate.py  v02_quality.py  v02_repair.py  v02_schema.py  (+7 more)
(+63 files in other folders)
